Provide summary findings

--- a/wholesale_data_analysis_starter_code.ipynb
+++ b/wholesale_data_analysis_starter_code.ipynb
@@ -1605,7 +1605,15 @@
    "id": "87e0e7f8-b60e-4e50-ab07-c36b6deed513",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "    Client ID 24741 had the most profit while spending the most in every category by a large margin. \n",
+    "    Client ID had the fewest units overall, yet made more profit than Client IDs 46820 and 33615, and only trailing behind 2nd place Client ID 38278 by ~ 0.02 millions.\n",
+    "    Client ID had the least Total Profit, trailing by 0.23 millions from the next in line, Client ID 46820. \n",
+    "    It appears Client ID was most successful by the number of units used and overall profit,\n",
+    "    while Client ID 24741 had overwhelming relative profit created by the sheer number of units.\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
